fixed buttons overlapping.

--- a/style.css
+++ b/style.css
@@ -882,32 +882,7 @@ section:nth-child(odd) .animate.scroll,
         width: 55%;
     }
 }
-@media (max-width: 768px) {
-    .btn-box {
-        flex-direction: column;
-        align-items: center;
-        height: auto;
-    }
 
-    .btn-box .btn {
-        width: 100%;
-        margin: 0.5rem 0;
-    }
-}
-
-
-@media (max-width: 768px) {
-    .btn-box {
-        flex-direction: column;
-        align-items: center;
-        height: auto;
-    }
-
-    .btn-box .btn {
-        width: 100%;
-        margin: 0.5rem 0;
-    }
-}
 
 @media (max-width: 768px) {
     .header {
@@ -973,6 +948,16 @@ section:nth-child(odd) .animate.scroll,
         background: var(--bg-color);
         opacity: .6;
     }
+	    .btn-box {
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+    }
+
+    .btn-box .btn {
+        width: 100%;
+        margin: 0.5rem 0;
+    }
 }
 
 @media (max-width: 520px) {
@@ -1004,7 +989,7 @@ section:nth-child(odd) .animate.scroll,
         padding: 10rem 4% 5rem 5%;
     }
 	
-	.exeperience {
+	.experience {
         padding: 10rem 4% 5rem 5%;
     }
 
